Fixed compilation for JDK versions <11
isBlank was added in JDK11 - source https://stackoverflow.com/a/57130572